--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div id="map" class="roundedBox panels">
 			</div>		
 		</div>
-		<!-- ##### A lentit még meg kell csinálni rendesen! Vszeg jjQuery-vel kéne létrehozni ezt is. -->
+		<!-- ##### A lentit még meg kell csinálni rendesen! Vszeg jQuery-vel kéne létrehozni ezt is. -->
 <!-- 		<div id="createdBy">
 			<p class="createdBy">Készítetők: Lellei László, Ónodi Zsolt (<a href="http://lechnerkozpont.hu/" class="headingLink" target="blank">Lechner Tudásközpont</a>), <a href="https://developers.arcgis.com/javascript/" class="headingLink" target="blank">ArcGIS API for JS</a> és <a href="http://www.amcharts.com/javascript-charts/" class="headingLink" target="blank">amCharts JS Charts</a> felhasználásával.</p>
 		</div> -->
