--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <body class="claro">
 		<div id="heading" class="roundedBox headTitle">
             <img src = "img/logo.png" alt = "Lechner Tudásközpont" class="logo"/>
-            <header class="mainTitle">Tér-Figyelő 2017. május</header>
-            <p class="createdBy">Készítette a <a href="http://lechnerkozpont.hu/" class="headingLink" target="blank">Lechner Tudásközpont</a>, <a href="https://developers.arcgis.com/javascript/" class="headingLink" target="blank">ArcGIS API for JS</a> és <a href="http://www.amcharts.com/javascript-charts/" class="headingLink" target="blank">amCharts JS Charts</a> felhasználásával.</p>
+            <header id="title" class="mainTitle">Tér-Figyelő 2017. május</header>
+            <p id="subTitle" class="subTitle">Készítette a <a href="http://lechnerkozpont.hu/" class="headingLink" target="blank">Lechner Tudásközpont</a>, <a href="https://developers.arcgis.com/javascript/" class="headingLink" target="blank">ArcGIS API for JS</a> és <a href="http://www.amcharts.com/javascript-charts/" class="headingLink" target="blank">amCharts JS Charts</a> felhasználásával.</p>
             <img id="infoIcon" src = "img/info.png" alt = "Információ" class="infoImg" onclick="controlInfoBox()"/>
 			<!-- ##### A lentit még meg kell csinálni rendesen! -->
 			<img id="createdByIcon" src = "img/info.png" alt = "Készítette" class="infoImg" onclick="controlCreatedByBox()"/>
@@ -47,6 +47,8 @@
 			<div id="map" class="roundedBox panels">
 			</div>		
 		</div>
+        <div id="splash"></div>
+        <div id="infoBox"></div>
 		<!-- ##### A lentit még meg kell csinálni rendesen! Vszeg jQuery-vel kéne létrehozni ezt is. -->
 <!-- 		<div id="createdBy">
 			<p class="createdBy">Készítetők: Lellei László, Ónodi Zsolt (<a href="http://lechnerkozpont.hu/" class="headingLink" target="blank">Lechner Tudásközpont</a>), <a href="https://developers.arcgis.com/javascript/" class="headingLink" target="blank">ArcGIS API for JS</a> és <a href="http://www.amcharts.com/javascript-charts/" class="headingLink" target="blank">amCharts JS Charts</a> felhasználásával.</p>
