--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <body class="claro">
 		<div id="heading" class="roundedBox headTitle">
             <img src = "img/logo.png" alt = "Lechner Tudásközpont" class="logo"/>
-            <header id="title" class="mainTitle">Tér-Figyelő 2017. május</header>
-            <p id="subTitle" class="subTitle">Készítette a <a href="http://lechnerkozpont.hu/" class="headingLink" target="blank">Lechner Tudásközpont</a>, <a href="https://developers.arcgis.com/javascript/" class="headingLink" target="blank">ArcGIS API for JS</a> és <a href="http://www.amcharts.com/javascript-charts/" class="headingLink" target="blank">amCharts JS Charts</a> felhasználásával.</p>
+            <header id="title" class="mainTitle"></header>
+            <p id="subTitle" class="subTitle"></p>
             <img id="infoIcon" src = "img/info.png" alt = "Információ" class="infoImg" onclick="controlInfoBox()"/>
 			<!-- ##### A lentit még meg kell csinálni rendesen! -->
 			<img id="createdByIcon" src = "img/info.png" alt = "Készítette" class="infoImg" onclick="controlCreatedByBox()"/>
@@ -34,9 +34,7 @@
 		<div id="timeSlider" class="roundedBox">
 		</div>
 		<div id="actualPanel" class="roundedBox">
-			<div id="placeYear">
-            Kattintson a térképen egy területegységre!
-			</div>
+			<div id="placeYear"></div>
 			<div id="theme">
                 <button class="dropDownButton"></button>
                 <div id="dropDownContent" class="dropdown-content">
