--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "utf-8"/>
-		<title>Dashboard</title>
+		<title>Dash-Map-Board</title>
         <!-- jQuery -->
 		<script src = "js/jquery.js"></script>
 		<!-- ArcGIS JS API -->
